2009-05-19  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_languages),
	(bacon_video_widget_get_language): Fix API, -2 was for
	"no audio" track, which we don't really want to support,
	avoids warnings when there's only one audio track.
	Also avoid showing the redundant "Auto" and "AUDIO 0" tracks
	when there's only one audio track

2009-05-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-options.c (totem_options_register_remote_commands):
	* src/totem-options.h:
	* src/totem.c (main): Register the remote commands for
	use by UniqueApp, fixes remote commands not working...

2009-05-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-object.c (totem_remote_command_get_type):
	Add missing enum values to the GEnumClass

2009-05-13  Jan Schmidt  <thaytan@noraisin.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bvw_do_navigation_query), (bvw_handle_element_message),
	(bacon_video_widget_has_menus):
	* src/backend/bacon-video-widget.h:

	Provide a method to know if there are buttons currently
	onscreen.

2009-05-13  Jan Schmidt  <thaytan@noraisin.net>

	* src/backend/bacon-video-widget-gst-0.10.c (bvw_element_msg_sync):
	Avoid a race with xoverlay interface discovery. Because the
	update_interface implementations function only searches for interfaces
	from the main gui thread, there's a race when the sync_msg comes in
	requesting an xid to embed and the xoverlay interface isn't available
	until the gui thread updates it.

	Avoid the race by using the sender of the message when it (as it
	always should) implements the GstXOverlay interface.

2009-05-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c (totem_uri_get_cached_subtitle_for_uri):
	Fix loading subtitles from the cache when the filename
	contains characters that need to be escaped (Closes: #582316)

2009-05-07  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(get_visualization_size): Remove unneeded